src/objects/Test_Customer_Sharing__c.object
<CustomObject>
    <fields>
        <fullName>Associated_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Test Customer Sharing</relationshipLabel>
        <relationshipName>Test_Customer_Sharing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associated_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Test Customer Sharing</relationshipLabel>
        <relationshipName>Test_Customer_Sharing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Test Customer Sharing</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Candidate_Queue_Test_Customer_Sharing</fullName>
        <filterScope>Queue</filterScope>
        <label>Candidate Queue</label>
        <queue>Candidate_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Test Customer Sharing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Customer Sharing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>